--- a/test/drag-and-drop-v3/estilos.css
+++ b/test/drag-and-drop-v3/estilos.css
@@ -1,11 +1,8 @@
-body {
-  margin: 0;
-}
-
 .container {
   background-color: #333;
   padding: 1rem;
   margin-top: 1rem;
+  color: white;
 }
 
 .draggable {
@@ -14,6 +11,7 @@ body {
   border: 1px solid black;
   cursor: move;
   width: 100px;
+  color: black;
 }
 
 .draggable.dragging {
