--- a/css/estilo.css
+++ b/css/estilo.css
@@ -348,7 +348,7 @@ footer{
 
 /*Formulario*/
 
-form {
+.form {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
