--- a/css/estilo.css
+++ b/css/estilo.css
@@ -140,7 +140,6 @@ footer{
 /* Drag and drop estilos */
 .container {
     display: flex;
-    flex-direction: column;
     align-items: center;
     border-radius: 2rem;
     text-align: center;
@@ -149,6 +148,7 @@ footer{
     margin-top: 1rem;
     color: white;
     width: 100%;
+    flex-wrap: wrap;
 }
 
 .draggable {
@@ -507,8 +507,11 @@ footer{
     width: 143px;
 }
 .formPalabras{
-    width: 200px;
+    width: 435px;
 }
 .imgValidar{
     width: 23%;
+}
+.span_palabras{
+    width: 100%;
 }
